Mon Nov 19 14:08:18 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.c (gtk_label_init): Change default for
	justify to GTK_JUSTIFY_LEFT. Assuming that multiline
	labels are most often wrapped labels, this gives better
	compatibility with GTK+-1.2, where justification was
	ignored for wrapped labesl and is a more sensible
	default in any case. (#64489)

	* gtk/gtklabel.c (gtk_label_class_init): Fix default
	for wrap property to FALSE.

2001-11-19  jacob berkman  <jacob@ximian.com>

	* gtk/Makefile.am (gtk_extra_sources): add gtkmarshal.list

Mon Nov 19 13:56:45 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkwindow-x11.c (gdk_window_focus): Use 
	RevertToParent, not RevertToNone. (#64613, 
	Matthias Clasen)

Mon Nov 19 12:28:02 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkframe.c (gtk_frame_class_init): label_xalign
	and label_yalign need to be float properties to
	correspond to GTK+-1.2, to gtk_frame_set_label_align,
	and to the types of the xalign and yalign properties of GtkMisc.
	(#63484, Vitaly Tishkov)

Mon Nov 19 12:24:30 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtksocket.h (struct _GtkSocketClass): Fix return
	of plug_added vfunc. (#64408, Jeff Franks)

Mon Nov 19 12:07:20 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in (deps): Undef HAVE_STDLIB_H before
	checking for jpeg, because jconfig.h has this
	in it too (%#$@!). Fix from Matthias Clasen, #64500.

Mon Nov 19 11:30:03 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkproperty-x11.c (get_atom_name): Fix a 
	memory leak when retrieving atom names. (Michael Meeks,
	#64508)

2001-11-18  Alex Larsson  <alexl@redhat.com>

	* gdk/x11/gdkfont-x11.c (gdk_font_from_description):
	Update to new Pango API.
	
Sun Nov 18 19:47:29 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkobject.h docs/Changes-2.0.txt: Rename the
	GTK_DESTROYED flag to GTK_IN_DESTRUCTION, remove the
	GTK_OBJECT_DESTROYED() check macro.

	* gtk/gtkbindings.c (gtk_bindings_activate): Remove